--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <td><img src="images/bogdan.png" alt="Ionescu Profile Picture"></td>
             <td><h1>Ionescu Bogdan Cosmin</h1> 
                 <p><em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The app Breweri</a></strong></em></p>
-                <p>I am an IOS and Web Developer. I love iubu and iubu</p></td>  
+                <p>I am an IOS and Web Developer. Sunt bun in tot ce fac si dau muie la fraieri.</p></td>  
         </tr>
     </table> 
     <hr>
